2006-10-22  Dave Beckett  <dave@dajobe.org>

	* Snapshotted raptor_1_4_13 for 1.4.13 release

	* src/raptor_rss.c: (raptor_rss_end_element_handler): Only declare
	name when debugging.

	* src/win32_raptor_config.h: Update defines:
	HAVE_XMLSAX2INTERNALSUBSET replaces RAPTOR_LIBXML_XMLSAX2INTERNALSUBSET
	Added HAVE_XMLCTXTUSEOPTIONS
	Deleted RAPTOR_LIBXML_XMLUSENEWPARSER

	* src/raptor_xslt.c: (raptor_xslt_uri_parse_bytes): Use #ifdef
	HAVE_XMLCTXTUSEOPTIONS to protect call to xmlCtxtUseOptions

	* src/raptor_sax2.c: (raptor_sax2_parse_chunk): Use #ifdef
	HAVE_XMLCTXTUSEOPTIONS to protect call to xmlCtxtUseOptions

	* src/raptor_libxml.c: #ifdef HAVE_XMLSAX2INTERNALSUBSET replaces
	RAPTOR_LIBXML_XMLSAX2INTERNALSUBSET

	* configure.ac: Remove unused check for xmlUseNewParser (defining
	RAPTOR_LIBXML_XMLUSENEWPARSER) Use AC_CHECK_FUNCS to check for new
	xmlCtxtUseOptions and existing xmlSAX2InternalSubset

2006-10-21  Dave Beckett  <dave@dajobe.org>

	* src/raptor_serialize_rdfxmla.c:
	(raptor_rdfxmla_emit_subject_properties): Throw an error and skip
	triple if cannot make URI from a predicate.

2006-10-13  Dave Beckett  <dave@dajobe.org>

	* src/raptor_uri.c: (raptor_uri_to_relative_counted_uri_string):
	Check for equal scheme and authority correctly.
	Fixes Issue #0000134 http://bugs.librdf.org/mantis/view.php?id=134

	* src/raptor_uri.c: (main): Test for bug 134

2006-10-09  Dave Beckett  <dave@dajobe.org>

	* src/raptor_parse.c: (raptor_set_default_generate_id_parameters)
	autodocs

2006-10-08  Dave Beckett  <dave@dajobe.org>

	* src/raptor_serialize_rdfxmla.c: (raptor_rdfxmla_serialize_start)
	Free any existing xml_writer before making a new one.

	* src/raptor_serialize_rdfxml.c: (raptor_rdfxml_serialize_start)
	Free any existing xml_writer before making a new one.

	* src/raptor_serialize_rss.c: (raptor_rss10_serialize_end): Free
	any existing xml_writer before making a new one.

2006-10-05  Dave Beckett  <dave@dajobe.org>

	* configure.ac: Found more -W flags.