@@ -9,6 +9,24 @@
 <h1 style="text-align:center">Raptor RDF Parser Toolkit - News</h1>
 
 
+<h2 id="D2006-XX-YY-V1.6.0">2006-XX-YY Raptor Version 1.6.0 Released</h2>
+
+<p>Not yet released.
+</p>
+
+<p>See the <a href="RELEASE.html#rel1_6_0">Raptor 1.6.0 Release Notes</a>
+for the full details of the changes.</p>
+
+
+<h2 id="D2006-XX-YY-V1.5.0">2006-XX-YY Raptor Development Snapshot 1.5.0 Released</h2>
+
+<p>Not yet released.
+</p>
+
+<p>See the <a href="RELEASE.html#rel1_5_0">Raptor 1.5.0 Release Notes</a>
+for the full details of the changes.</p>
+
+
 <h2 id="D2006-10-22-V1.4.13">2006-10-22 Raptor Version 1.4.13 Released</h2>
 
 <p>Fixed a memory leak in reusing the XML writer<br />
