@@ -9,6 +9,17 @@
   <h1>Raptor RDF Parser Toolkit - Release Notes</h1>
 
 
+<h2 id="rel1_6_0"><a name="rel1_6_0">Raptor 1.6.0 Changes</a></h2>
+
+<p>Not yet released.
+</p>
+
+<h2 id="rel1_5_0"><a name="rel1_5_0">Raptor Development Snapshot 1.5.0 Changes</a></h2>
+
+<p>Not yet released.
+</p>
+
+
 <h2 id="rel1_4_13"><a name="rel1_4_13">Raptor 1.4.13 Changes</a></h2>
 
 <h3>General Changes</h3>
